--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   },
   "dependencies": {
     "async": "^3.2.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "cookie-parser": "^1.4.5",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "express": "^4.17.1",
+    "http-errors": "^1.7.3",
     "mongoose": "^5.9.7",
-    "morgan": "~1.9.1",
+    "morgan": "^1.10.0",
     "pug": "^2.0.4"
   },
   "devDependencies": {
