--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-errors": "^1.7.3",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
     "pug": "^2.0.4"
