--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "moment": "^2.24.0",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "acorn": ">=5.7.4",
+    "kind-of": ">=6.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
