--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "SET DEBUG=bug-free-engine:* & npm run devstart"
+    "serverstart": "SET DEBUG=bug-free-engine:* & npm run devstart",
+    "test": "scripts/test"
   },
   "dependencies": {
     "async": "^3.2.0",
