--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "test": "scripts/test"
   },
   "dependencies": {
+    "acorn": ">=5.7.4",
     "async": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "http-errors": "^1.7.3",
+    "kind-of": ">=6.0.3",
     "moment": "^2.24.0",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
-    "pug": "^2.0.4",
-    "acorn": ">=5.7.4",
-    "kind-of": ">=6.0.3"
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
