--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "test": "scripts/test"
   },
   "dependencies": {
-    "acorn": ">=5.7.4",
+    "acorn": "^7.2.0",
     "async": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-validator": "^6.4.1",
+    "express-validator": "^6.5.0",
     "http-errors": "^1.7.3",
     "kind-of": ">=6.0.3",
-    "moment": "^2.25.3",
-    "mongoose": "^5.9.12",
+    "moment": "^2.26.0",
+    "mongoose": "^5.9.15",
     "morgan": "^1.10.0",
     "pug": "^2.0.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.4"
   }
 }
