--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "acorn": "^7.2.0",
     "async": "^3.2.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
+    "helmet": "^3.22.0",
     "http-errors": "^1.7.3",
     "kind-of": ">=6.0.3",
     "moment": "^2.26.0",
