--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,19 +3,12 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2.1
+orbs:
+  node: circleci/node@5.1.0
 jobs:
   build:
     docker:
-      # specify the version you desire here
-      - image: circleci/node:13.6
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
-    working_directory: ~/repo
-
+      - image: cimg/base:stable
     steps:
       - checkout
 
